langkit/sustained/src/gpr_parser.h


typedef struct
{
   uint64_t serial_number;
} *gpr_analysis_context;
typedef struct
{
   uint64_t version_number;
} *gpr_analysis_unit;
typedef void* gpr_base_node;
typedef enum {
        gpr_ada_access_subp = 1,
        gpr_ada_pragma = 2,
        gpr_ada_use = 3,
        gpr_ada_with = 4,
        gpr_ada_entity_kind_function = 5,
        gpr_ada_entity_kind_package = 6,
        gpr_ada_entity_kind_procedure = 7,
        gpr_ada_generic = 8,
        gpr_ada_library_item = 9,
        gpr_ada_pkg = 10,
        gpr_ada_pkg_body = 11,
        gpr_ada_subp = 12,
        gpr_ada_prelude = 13,
        gpr_ada_separate = 14,
        gpr_ada_skip = 15,
        gpr_ada_with_formal = 16,
        gpr_all_qualifier_absent = 17,
        gpr_all_qualifier_present = 18,
        gpr_attribute_decl = 19,
        gpr_attribute_reference = 20,
        gpr_ada_context_clause_list = 21,
        gpr_ada_prelude_node_list = 22,
        gpr_ada_skip_list = 23,
        gpr_case_item_list = 24,
        gpr_expr_list = 25,
        gpr_gpr_node_list = 26,
        gpr_choices = 27,
        gpr_term_list = 28,
        gpr_identifier_list = 29,
        gpr_string_literal_list = 30,
        gpr_term_list_list = 31,
        gpr_with_decl_list = 32,
        gpr_builtin_function_call = 33,
        gpr_case_construction = 34,
        gpr_case_item = 35,
        gpr_compilation_unit = 36,
        gpr_empty_decl = 37,
        gpr_prefix = 38,
        gpr_identifier = 39,
        gpr_num_literal = 40,
        gpr_string_literal = 41,
        gpr_limited_absent = 42,
        gpr_limited_present = 43,
        gpr_others_designator = 44,
        gpr_package_decl = 45,
        gpr_package_extension = 46,
        gpr_package_renaming = 47,
        gpr_package_spec = 48,
        gpr_private_absent = 49,
        gpr_private_present = 50,
        gpr_project = 51,
        gpr_project_declaration = 52,
        gpr_project_extension = 53,
        gpr_project_qualifier_abstract = 54,
        gpr_project_qualifier_aggregate = 55,
        gpr_project_qualifier_aggregate_library = 56,
        gpr_project_qualifier_configuration = 57,
        gpr_project_qualifier_library = 58,
        gpr_project_qualifier_standard = 59,
        gpr_string_literal_at = 60,
        gpr_terms = 61,
        gpr_type_reference = 62,
        gpr_typed_string_decl = 63,
        gpr_variable_decl = 64,
        gpr_variable_reference = 65,
        gpr_with_decl = 66,
} gpr_node_kind_enum;
typedef struct {
   void *data;
   void *bounds;
} gpr_symbol_type;
typedef struct {
   int length;
   int ref_count;
   uint32_t content[1];
} *gpr_string_type;
typedef uint8_t gpr_bool;
typedef struct {
    uint32_t line;
    uint16_t column;
} gpr_source_location;
typedef struct {
    gpr_source_location start;
    gpr_source_location end;
} gpr_source_location_range;
typedef struct {
    uint32_t *chars;
    size_t length;
    int is_allocated;
} gpr_text;
typedef void *gpr_big_integer;
typedef enum {
      GPR_TERMINATION = 0
      ,
      GPR_LEXING_FAILURE = 1
      ,
      GPR_IDENTIFIER = 2
      ,
      GPR_ALL = 3
      ,
      GPR_ABSTRACT = 4
      ,
      GPR_AT = 5
      ,
      GPR_CASE = 6
      ,
      GPR_END = 7
      ,
      GPR_FOR = 8
      ,
      GPR_IS = 9
      ,
      GPR_LIMITED = 10
      ,
      GPR_PRIVATE = 11
      ,
      GPR_NULL = 12
      ,
      GPR_OTHERS = 13
      ,
      GPR_PACKAGE = 14
      ,
      GPR_RENAMES = 15
      ,
      GPR_TYPE = 16
      ,
      GPR_USE = 17
      ,
      GPR_PRAGMA = 18
      ,
      GPR_WHEN = 19
      ,
      GPR_WITH = 20
      ,
      GPR_EXTENDS = 21
      ,
      GPR_PAR_OPEN = 22
      ,
      GPR_PAR_CLOSE = 23
      ,
      GPR_SEMICOLON = 24
      ,
      GPR_COLON = 25
      ,
      GPR_COMMA = 26
      ,
      GPR_DOT = 27
      ,
      GPR_AMP = 28
      ,
      GPR_TICK = 29
      ,
      GPR_PIPE = 30
      ,
      GPR_ASSIGN = 31
      ,
      GPR_ARROW = 32
      ,
      GPR_STRING = 33
      ,
      GPR_NUMBER = 34
      ,
      GPR_LABEL = 35
      ,
      GPR_CHAR = 36
      ,
      GPR_COMMENT = 37
      ,
      GPR_WHITESPACE = 38
} gpr_token_kind;
typedef struct
{
   uint64_t version;
} *gpr_token_data_handler;
typedef struct {
    gpr_analysis_context context;
    gpr_token_data_handler token_data;
    int token_index, trivia_index;
    gpr_token_kind kind;
    gpr_text text;
    gpr_source_location_range sloc_range;
} gpr_token;
typedef struct {
    gpr_source_location_range sloc_range;
    gpr_text message;
} gpr_diagnostic;
   typedef enum {
      GPR_ANALYSIS_UNIT_KIND_UNIT_SPECIFICATION, GPR_ANALYSIS_UNIT_KIND_UNIT_BODY
   } gpr_analysis_unit_kind;
   typedef enum {
      GPR_LOOKUP_KIND_RECURSIVE, GPR_LOOKUP_KIND_FLAT, GPR_LOOKUP_KIND_MINIMAL
   } gpr_lookup_kind;
   typedef enum {
      GPR_DESIGNATED_ENV_KIND_NONE, GPR_DESIGNATED_ENV_KIND_CURRENT_ENV, GPR_DESIGNATED_ENV_KIND_NAMED_ENV, GPR_DESIGNATED_ENV_KIND_DIRECT_ENV
   } gpr_designated_env_kind;
   typedef enum {
      GPR_GRAMMAR_RULE_PROJECT_QUALIFIER_RULE, GPR_GRAMMAR_RULE_PROJECT_EXTENSION_RULE, GPR_GRAMMAR_RULE_PROJECT_DECLARATION_RULE, GPR_GRAMMAR_RULE_PROJECT_RULE, GPR_GRAMMAR_RULE_DECLARATIVE_ITEMS_RULE, GPR_GRAMMAR_RULE_DECLARATIVE_ITEM_RULE, GPR_GRAMMAR_RULE_SIMPLE_DECLARATIVE_ITEMS_RULE, GPR_GRAMMAR_RULE_SIMPLE_DECLARATIVE_ITEM_RULE, GPR_GRAMMAR_RULE_VARIABLE_DECL_RULE, GPR_GRAMMAR_RULE_ATTRIBUTE_DECL_RULE, GPR_GRAMMAR_RULE_ASSOCIATIVE_ARRAY_INDEX_RULE, GPR_GRAMMAR_RULE_PACKAGE_DECL_RULE, GPR_GRAMMAR_RULE_PACKAGE_RENAMING_RULE, GPR_GRAMMAR_RULE_PACKAGE_EXTENSION_RULE, GPR_GRAMMAR_RULE_PACKAGE_SPEC_RULE, GPR_GRAMMAR_RULE_EMPTY_DECLARATION_RULE, GPR_GRAMMAR_RULE_CASE_CONSTRUCTION_RULE, GPR_GRAMMAR_RULE_CASE_ITEM_RULE, GPR_GRAMMAR_RULE_OTHERS_DESIGNATOR_RULE, GPR_GRAMMAR_RULE_CHOICE_RULE, GPR_GRAMMAR_RULE_DISCRETE_CHOICE_LIST_RULE, GPR_GRAMMAR_RULE_WITH_DECL_RULE, GPR_GRAMMAR_RULE_CONTEXT_CLAUSES_RULE, GPR_GRAMMAR_RULE_ADA_WITH_CLAUSE_RULE, GPR_GRAMMAR_RULE_ADA_CONTEXT_RULE, GPR_GRAMMAR_RULE_ADA_CONTEXT_ITEM_RULE, GPR_GRAMMAR_RULE_ADA_CONTEXT_SKIP_RULE, GPR_GRAMMAR_RULE_ADA_USE_CLAUSE_RULE, GPR_GRAMMAR_RULE_ADA_PRAGMA_RULE, GPR_GRAMMAR_RULE_ADA_SUBP_KIND_RULE, GPR_GRAMMAR_RULE_ADA_PKG_KIND_RULE, GPR_GRAMMAR_RULE_ADA_LIBRARY_ITEM_RULE, GPR_GRAMMAR_RULE_ADA_PRELUDE_RULE, GPR_GRAMMAR_RULE_TYPED_STRING_DECL_RULE, GPR_GRAMMAR_RULE_IDENTIFIER_RULE, GPR_GRAMMAR_RULE_STRING_LITERAL_RULE, GPR_GRAMMAR_RULE_NUM_LITERAL_RULE, GPR_GRAMMAR_RULE_STATIC_NAME_RULE, GPR_GRAMMAR_RULE_ATTRIBUTE_REFERENCE_RULE, GPR_GRAMMAR_RULE_VARIABLE_REFERENCE_RULE, GPR_GRAMMAR_RULE_TYPE_REFERENCE_RULE, GPR_GRAMMAR_RULE_BUILTIN_FUNCTION_CALL_RULE, GPR_GRAMMAR_RULE_EXPRESSION_RULE, GPR_GRAMMAR_RULE_EXPRESSION_LIST_RULE, GPR_GRAMMAR_RULE_STRING_LITERAL_AT_RULE, GPR_GRAMMAR_RULE_TERM_RULE, GPR_GRAMMAR_RULE_COMPILATION_UNIT_RULE
   } gpr_grammar_rule;
typedef enum {
      EXCEPTION_FILE_READ_ERROR,
      EXCEPTION_BAD_TYPE_ERROR,
      EXCEPTION_OUT_OF_BOUNDS_ERROR,
      EXCEPTION_INVALID_INPUT,
      EXCEPTION_INVALID_SYMBOL_ERROR,
      EXCEPTION_INVALID_UNIT_NAME_ERROR,
      EXCEPTION_NATIVE_EXCEPTION,
      EXCEPTION_PRECONDITION_FAILURE,
      EXCEPTION_PROPERTY_ERROR,
      EXCEPTION_TEMPLATE_ARGS_ERROR,
      EXCEPTION_TEMPLATE_FORMAT_ERROR,
      EXCEPTION_TEMPLATE_INSTANTIATION_ERROR,
      EXCEPTION_STALE_REFERENCE_ERROR,
      EXCEPTION_SYNTAX_ERROR,
      EXCEPTION_UNKNOWN_CHARSET,
      EXCEPTION_MALFORMED_TREE_ERROR,
} gpr_exception_kind;
typedef struct {
   gpr_exception_kind kind;
   const char *information;
} gpr_exception;
    typedef struct {
            gpr_internal_metadata md;
            gpr_env_rebindings_type rebindings;
            gpr_bool from_rebound;
    } gpr_internal_entity_info;
    typedef struct {
            gpr_base_node node;
            gpr_internal_entity_info info;
    } gpr_base_entity;
typedef void *gpr_event_handler;
typedef void (*gpr_event_handler_unit_requested_callback)(
   void *data,
   gpr_analysis_context context,
   gpr_text *name,
   gpr_analysis_unit from,
   gpr_bool found,
   gpr_bool is_not_found_error
);
typedef void (*gpr_event_handler_destroy_callback)(void *data);
typedef void (*gpr_event_handler_unit_parsed_callback)(
   void *data,
   gpr_analysis_context context,
   gpr_analysis_unit unit,
   gpr_bool reparsed
);
typedef void *gpr_file_reader;
typedef void (*gpr_file_reader_destroy_callback)(void *data);
typedef void (*gpr_file_reader_read_callback)(
   void *data,
   const char *filename,
   const char *charset,
   int read_bom,
   gpr_text *buffer,
   gpr_diagnostic *diagnostic
);
extern void
gpr_free(void *address);
extern void
gpr_destroy_text(gpr_text *text);
extern void
gpr_symbol_text(gpr_symbol_type *symbol,
                                gpr_text *text);
extern gpr_big_integer
gpr_create_big_integer(gpr_text *text);
extern void
gpr_big_integer_text(gpr_big_integer bigint,
                                     gpr_text *text);
extern void
gpr_big_integer_decref(gpr_big_integer bigint);
extern void
gpr_get_versions(char **version, char **build_date);
extern gpr_string_type
gpr_create_string(uint32_t *content, int length);
extern void
gpr_string_dec_ref(gpr_string_type self);