langkit/sustained/src/gpr_parser-implementation-c.ads


--
--  Copyright (C) 2019-2023, AdaCore
--  SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
--










with Ada.Exceptions;                  use Ada.Exceptions;
with Ada.Strings.Wide_Wide_Unbounded; use Ada.Strings.Wide_Wide_Unbounded;
with Ada.Unchecked_Conversion;

with System;

with Interfaces;           use Interfaces;
with Interfaces.C;         use Interfaces.C;
with Interfaces.C.Strings; use Interfaces.C.Strings;

with Gpr_Parser_Support.Slocs; use Gpr_Parser_Support.Slocs;
with Gpr_Parser_Support.Text;  use Gpr_Parser_Support.Text;

with Gpr_Parser.Common;   use Gpr_Parser.Common;




--  Internal package: defines data types and subprograms to provide the
--  implementation of the exported C API (see the corresponding C header file).

private package Gpr_Parser.Implementation.C is

   subtype gpr_analysis_context is Internal_Context;
   --  This type represents a context for all source analysis. This is the
   --  first type you need to create to use Gpr_Parser. It will contain the
   --  results of all analysis, and is the main holder for all the data.
   --
   --  You can create several analysis contexts if you need to, which enables
   --  you, for example to:
   --
   --  * analyze several different projects at the same time;
   --
   --  * analyze different parts of the same projects in parallel.
   --
   --  In the current design, contexts always keep all of their analysis units
   --  allocated. If you need to get this memory released, the only option at
   --  your disposal is to destroy your analysis context instance.
   --
   --  This structure is partially opaque: some fields are exposed to allow
   --  direct access, for performance concerns.

   subtype gpr_analysis_unit is Internal_Unit;
   --  This type represents the analysis of a single file.
   --
   --  This type has strong-reference semantics and is ref-counted.
   --  Furthermore, a reference to a unit contains an implicit reference to the
   --  context that owns it. This means that keeping a reference to a unit will
   --  keep the context and all the unit it contains allocated.
   --
   --  This structure is partially opaque: some fields are exposed to allow
   --  direct access, for performance concerns.

   type gpr_base_node is new System.Address;
   --  Data type for all nodes. Nodes are assembled to make up a tree.  See the
   --  node primitives below to inspect such trees.
   --
   --  Unlike for contexts and units, this type has weak-reference semantics:
   --  keeping a reference to a node has no effect on the decision to keep the
   --  unit that it owns allocated. This means that once all references to the
   --  context and units related to a node are dropped, the context and its
   --  units are deallocated and the node becomes a stale reference: most
   --  operations on it will raise a ``Stale_Reference_Error``.
   --
   --  Note that since reparsing an analysis unit deallocates all the nodes it
   --  contains, this operation makes all reference to these nodes stale as
   --  well.

   type gpr_node_kind_enum is new int;
   --  Kind of AST nodes in parse trees.

   



subtype gpr_base_entity is Internal_Entity;
type gpr_base_entity_Ptr is access Internal_Entity;




   type gpr_symbol_type is record
      Data, Bounds : System.Address;
   end record
      with Convention => C;
   --  Reference to a symbol. Symbols are owned by analysis contexts, so they
   --  must not outlive them. This type exists only in the C API, and roughly
   --  wraps the corresponding Ada type (an array fat pointer).

   subtype gpr_string_type is String_Type;

   --  Helper data structures for source location handling

   type gpr_source_location is record
      Line   : Unsigned_32;
      Column : Unsigned_16;
   end record
     with Convention => C;

   type gpr_source_location_range is record
      Start_S, End_S : gpr_source_location;
   end record
     with Convention => C;

   type gpr_text is record
      Chars  : System.Address;
      --  Address for the content of the string.

      Length : size_t;
      --  Size of the string (in characters).

      Is_Allocated : int;
   end record
     with Convention => C;
   --  String encoded in UTF-32 (native endianness).

   type gpr_big_integer is new System.Address;
   --  Arbitrarily large integer.

   type gpr_token is record
      Context                   : gpr_analysis_context;
      Token_Data                : Token_Data_Handler_Access;
      Token_Index, Trivia_Index : int;

      Kind       : int;
      Text       : gpr_text;
      Sloc_Range : gpr_source_location_range;
   end record
     with Convention => C;
   --  Reference to a token in an analysis unit.

   type gpr_diagnostic is record
      Sloc_Range : gpr_source_location_range;
      Message    : gpr_text;
      --  When the API returns a diagnostic, it is up to the caller to free the
      --  message string.
   end record
     with Convention => C;
   --  Diagnostic for an analysis unit: cannot open the source file, parsing
   --  error, ...

   type gpr_exception_kind is (
      Exception_File_Read_Error, Exception_Bad_Type_Error, Exception_Out_Of_Bounds_Error, Exception_Invalid_Input, Exception_Invalid_Symbol_Error, Exception_Invalid_Unit_Name_Error, Exception_Native_Exception, Exception_Precondition_Failure, Exception_Property_Error, Exception_Template_Args_Error, Exception_Template_Format_Error, Exception_Template_Instantiation_Error, Exception_Stale_Reference_Error, Exception_Syntax_Error, Exception_Unknown_Charset, Exception_Malformed_Tree_Error
   ) with Convention => C;
   --  Enumerated type describing all possible exceptions that need to be
   --  handled in the C bindings.

   type gpr_exception is record
      Kind : gpr_exception_kind;
      --  The kind of this exception.

      Information : chars_ptr;
      --  Message and context information associated with this exception.
   end record;
   --  Holder for native exceptions-related information.  Memory management for
   --  this and all the fields is handled by the library: one just has to make
   --  sure not to keep references to it.
   --
   --  .. TODO: For the moment, this structure contains already formatted
   --     information, but depending on possible future Ada runtime
   --     improvements, this might change.

   type gpr_exception_Ptr is access gpr_exception;

   type gpr_bool is new Unsigned_8;
   subtype uint32_t is Unsigned_32;

      subtype gpr_analysis_unit_kind is Analysis_Unit_Kind;
      subtype gpr_lookup_kind is Lookup_Kind;
      subtype gpr_designated_env_kind is Designated_Env_Kind;
      subtype gpr_grammar_rule is Grammar_Rule;

   procedure Free (Address : System.Address)
     with Export        => True,
          Convention    => C,
          External_Name => "gpr_free";
   --  Free dynamically allocated memory.
   --
   --  This is a helper to free objects from dynamic languages.
   --  Helper to free objects in dynamic languages

   procedure gpr_destroy_text (T : access gpr_text)
     with Export        => True,
          Convention    => C,
          External_Name => "gpr_destroy_text";
   --  If this text object owns the buffer it references, free this buffer.
   --
   --  Note that even though this accepts a pointer to a text object, it does
   --  not deallocates the text object itself but rather the buffer it
   --  references.

   procedure gpr_symbol_text
     (Symbol : access gpr_symbol_type; Text : access gpr_text)
      with Export, Convention => C,
           External_Name => "gpr_symbol_text";
   --  Return the text associated to this symbol.

   function gpr_create_big_integer
     (Text : access gpr_text) return gpr_big_integer
      with Export, Convention => C,
           External_Name => "gpr_create_big_integer";
   --  Create a big integer from its string representation (in base 10).

   procedure gpr_big_integer_text
     (Bigint : gpr_big_integer; Text : access gpr_text)
      with Export, Convention => C,
           External_Name => "gpr_big_integer_text";
   --  Return the string representation (in base 10) of this big integer.

   procedure gpr_big_integer_decref
     (Bigint : gpr_big_integer)
      with Export, Convention => C,
           External_Name => "gpr_big_integer_decref";
   --  Decrease the reference count for this big integer.

   procedure gpr_get_versions
     (Version, Build_Date : access chars_ptr)
      with Export, Convention => C,
           External_Name => "gpr_get_versions";
   --  Allocate strings to represent the library version number and build date
   --  and put them in Version/Build_Date. Callers are expected to call free()
   --  on the returned string once done.

   function gpr_create_string
     (Content : System.Address; Length : int) return gpr_string_type
      with Export, Convention => C,
           External_Name => "gpr_create_string";
   --  Create a string value from its content (UTF32 with native endianity).
   --
   --  Note that the CONTENT buffer argument is copied: the returned value does
   --  not contain a reference to it.

   procedure gpr_string_dec_ref (Self : gpr_string_type)
      with Export, Convention => C,
           External_Name => "gpr_string_dec_ref";
   --  Decrease the reference count for this string.

   ------------------
   -- File readers --
   ------------------

   type gpr_file_reader is new System.Address;
   --  Interface to override how source files are fetched and decoded.

   type gpr_file_reader_destroy_callback is access procedure
     (Data : System.Address)
      with Convention => C;
   --  Callback type for functions that are called when destroying a file
   --  reader.

   type gpr_file_reader_read_callback is access procedure
     (Data       : System.Address;
      Filename   : chars_ptr;
      Charset    : chars_ptr;
      Read_BOM   : int;
      Buffer     : access gpr_text;
      Diagnostic : access gpr_diagnostic)
      with Convention => C;
   --  Callback type for functions that are called to fetch the decoded source
   --  buffer for a requested filename.

   --------------------
   -- Event handlers --
   --------------------

   type gpr_event_handler is new System.Address;
   --  Interface to handle events sent by the analysis context.

   type gpr_event_handler_unit_requested_callback is access procedure
     (Data               : System.Address;
      Context            : gpr_analysis_context;
      Name               : access constant gpr_text;
      From               : gpr_analysis_unit;
      Found              : gpr_bool;
      Is_Not_Found_Error : gpr_bool)
      with Convention => C;
   --  Callback that will be called when a unit is requested from the context
   --  ``Context``.
   --
   --  ``Name`` is the name of the requested unit.
   --
   --  ``From`` is the unit from which the unit was requested.
   --
   --  ``Found`` indicates whether the requested unit was found or not.
   --
   --  ``Is_Not_Found_Error`` indicates whether the fact that the unit was not
   --  found is an error or not.
   --
   --  .. warning:: The interface of this callback is probably subject to
   --     change, so should be treated as experimental.

   type gpr_event_handler_unit_parsed_callback is access procedure
     (Data     : System.Address;
      Context  : gpr_analysis_context;
      Unit     : gpr_analysis_unit;
      Reparsed : gpr_bool)
      with Convention => C;
   --  Callback that will be called when any unit is parsed from the context
   --  ``Context``.
   --
   --  ``Unit`` is the resulting unit.
   --
   --  ``Reparsed`` indicates whether the unit was reparsed, or whether it was
   --  the first parse.

   type gpr_event_handler_destroy_callback is access procedure
     (Data : System.Address)
      with Convention => C;
   --  Callback type for functions that are called when destroying an event
   --  handler.

   --------------------
   -- Unit providers --
   --------------------
